# Project

./: README.md  SYSTEM_OVERVIEW.md  __init__.py  download  engine.py  parser.py  pyproject.toml  sample_logs.jsonl
samples/: sample_logs.jsonl
src/log_threat_automation/: __init__.py  config.py  models.py  parser.py  rules.py
tests/: test_engine.py
